// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Main 1`] = `
<div
  className="pf-c-empty-state pf-m-lg"
>
  <Title
    headingLevel="h5"
    size="lg"
  >
    HTTP Proxies
  </Title>
  <EmptyStateBody
    className=""
  >
    Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
  </EmptyStateBody>
  <Button
    aria-label={null}
    className=""
    component="button"
    isActive={false}
    isBlock={false}
    isDisabled={false}
    isFocus={false}
    isHover={false}
    isInline={false}
    type="button"
    variant="primary"
  >
    New HTTP Proxy
  </Button>
  <EmptyStateSecondaryActions
    className=""
  >
    <Button
      aria-label="learn more action"
      className=""
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      isInline={false}
      type="button"
      variant="link"
    >
      Learn more about this in the documentation.
    </Button>
  </EmptyStateSecondaryActions>
</div>
`;

exports[`EmptyState Main variant regular 1`] = `
<div
  className="pf-c-empty-state"
>
  <Title>
    EmptyState full
  </Title>
</div>
`;

exports[`EmptyState Main variant small 1`] = `
<div
  className="pf-c-empty-state pf-m-sm"
>
  <Title>
    EmptyState small
  </Title>
</div>
`;
